# mnist

./: .gitignore  main.py  mnist_cnn.pt  model_building.ipynb  pyproject.toml
.ipynb_checkpoints/: model_building-checkpoint.ipynb
app/: data.py  mnist_cnn.py  trainer.py
scripts/: train.py
